# graindb

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: ccpp.yml
benchmark/: CMakeLists.txt  benchmark_runner.cpp
benchmark/imdb/: CMakeLists.txt  imdb_default.cpp  imdb_optimized.cpp
benchmark/include/: benchmark.hpp  benchmark_runner.hpp  duckdb_benchmark.hpp  sqlite_benchmark.hpp
benchmark/ldbc/: CMakeLists.txt  ldbc.cpp  ldbc_light_default.cpp  ldbc_light_optimized.cpp  ldbc_light_views.cpp  ldbc_micro_01.cpp  ldbc_micro_02.cpp  ldbc_micro_03.cpp  ldbc_micro_04.cpp  ldbc_micro_05.cpp  ldbc_micro_06.cpp  ldbc_micro_07.cpp  ldbc_micro_08.cpp  ldbc_micro_09.cpp  ldbc_micro_k.cpp  ldbc_micro_p.cpp
benchmark/micro/: append.cpp  q1join.cpp  q2join.cpp  q3join.cpp  q4join.cpp
benchmark/pubmed/: CMakeLists.txt  pubmed_large.cpp  pubmed_small.cpp
benchmark/tpch/: CMakeLists.txt  lineitem_aggregate.cpp  read_lineitem.cpp  startup.cpp  tpch_default.cpp  tpch_optimized.cpp
examples/embedded-c++/: CMakeLists.txt  main.cpp
examples/spectrum_runner/: CMakeLists.txt  Makefile  spectrum_runner.cpp
examples/sql/: simpe_edge_table_example.sql  simple_graph_example.sql  simple_graph_select.sql  simple_vertex_table_example.sql
examples/tpch/: CMakeLists.txt  Makefile  main.cpp
scripts/: add_github_ssh.sh  boxplot-subplots.py  boxplot.py  calculate.py  duck.sql  extract_query_latency.py  file_shuffle.py  generate_csv_header.py  generate_dir_plans.py  generate_imdb_header.py  generate_ldbc_header.py  generate_logs_graph.py  generate_parser.py  histogram.py  knows_names.py  load_ldbc.sh  person_names.py  plan_spectrum.py  plot.py  plot_boxplot_ablation.py  plot_boxplot_job.py  plot_boxplot_snb.py  plot_boxplot_tpch.py  plot_selectivity.py  plot_spectrum.py  run_benchmark.sh  run_job.sh  run_ldbc.sh  run_tpch.sh  selectivity_stats.py
spectrum_jos/Q01/: 1.json  10.json  100.json  101.json  102.json  103.json  104.json  105.json  106.json  107.json  108.json  109.json  11.json  110.json  111.json  112.json  113.json  114.json  115.json  116.json  117.json  118.json  119.json  12.json  120.json  121.json  122.json  123.json  (+196 more)
src/: CMakeLists.txt
test/: CMakeLists.txt
(+1197 files in other folders)
